# django_api

./: README.md  db.sqlite3  heroku.yml  pyproject.toml  requirements.txt
add_data/: permissions.py  serializer.py  views.py
first_api/: settings.py  urls.py
